--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			<h1>Первое задание</h1>
 			<form action="">
 				<p>Введите количество строк:</p>
-				<input class="graph__input" id="rows" type="text" required min="1" value="1">
+				<input class="graph__input" id="rows" type="number" required min="1" value="1">
 				<p>Введите количество столбцов:</p>
-				<input class="graph__input" id="column" type="text" required min="1" value="1">
+				<input class="graph__input" id="column" type="number" required min="1" value="1">
 				<br>
 				<button class="graph__btn graph__btn-first" id="inputButton">Создать матрицу</button>
 			</form>
