--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
 		<section class="tabcontent" id="first">
 			<h1>Первое задание</h1>
 			<form id="form" action="">
-				<p>Введите количество строк:</p>
-				<input class="graph__input" id="rows" type="number" required min="1" value="1">
-				<p>Введите количество столбцов:</p>
-				<input class="graph__input" id="columns" type="number" required min="1" value="1">
-				<br>
-				<!-- <button class="graph__btn graph__btn-first" id="inputButton">Создать матрицу</button> -->
-				<input type="button" class="graph__btn graph__btn-first" id="inputButton" value="Создать матрицу">
+				<div>
+					<p>Введите количество строк:</p>
+					<input class="graph__input" id="rows" type="number" required min="1" max="30" value="1">
+					<p>Введите количество столбцов:</p>
+					<input class="graph__input" id="columns" type="number" required min="1" max="30" value="1">
+					<br>
+					<!-- <button class="graph__btn graph__btn-first" id="inputButton">Создать матрицу</button> -->
+					<input type="button" class="graph__btn graph__btn-first" id="create_button" value="Создать матрицу">
+					<input type="button" class="graph__btn graph__btn-first graph__btn--clear" id="clear_button" value="Удалить матрицу">
+				</div>
 			</form>
 		</section>
 		<section class="tabcontent" id="second">
