--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="tabs.js"></script>
 	<script src="table.js"></script>
+	<script src="tasks/first_task.js"></script>
 	<script src="main.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
@@ -28,8 +29,9 @@
 					<input class="graph__input" id="columns" type="number" required min="1" max="30" value="1">
 					<br>
 					<!-- <button class="graph__btn graph__btn-first" id="inputButton">Создать матрицу</button> -->
-					<input type="button" class="graph__btn graph__btn-first" id="create_button" value="Создать матрицу">
-					<input type="button" class="graph__btn graph__btn-first graph__btn--clear" id="clear_button" value="Удалить матрицу">
+					<input type="button" class="graph__btn graph__btn-first" id="create_adj_button" value="Создать матрицу">
+					<input type="button" class="graph__btn graph__btn-first graph__btn--check" disabled id="check_adj_button" value="Проверить">
+					<input type="button" class="graph__btn graph__btn-first graph__btn--delete" id="delete_adj_button" value="Удалить матрицу">
 				</div>
 			</form>
 		</section>
