--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="tabs.js"></script>
-	<script src="table.js"></script>
-	<script src="tasks/first_task.js"></script>
-	<script src="main.js"></script>
+	<script src="js/tabs.js"></script>
+	<script src="js/matrix.js"></script>
+	<script src="js/tasks/first_task.js"></script>
+	<script src="js/main.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="common.blocks/style.css">
 	<title>Графы</title>
 </head>
 <body>
