--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 					<input class="graph__input" id="columns" type="number" required min="1" max="30" value="1">
 					<br>
 					<!-- <button class="graph__btn graph__btn-first" id="inputButton">Создать матрицу</button> -->
-					<input type="button" class="graph__btn graph__btn-first" id="create_adj_button" value="Создать матрицу">
-					<input type="button" class="graph__btn graph__btn-first graph__btn--check" disabled id="check_adj_button" value="Проверить">
-					<input type="button" class="graph__btn graph__btn-first graph__btn--delete" id="delete_adj_button" value="Удалить матрицу">
+					<input type="button" class="graph__btn graph__btn-first" id="create_button__first" value="Создать матрицу">
+					<input type="button" class="graph__btn graph__btn-first graph__btn--check" disabled id="check_button__first" value="Проверить">
+					<input type="button" class="graph__btn graph__btn-first graph__btn--delete" id="delete_button__first" value="Удалить матрицу">
 				</div>
 			</form>
 		</section>
