--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 					<!-- <button class="graph__btn graph__btn-first" id="inputButton">Создать матрицу</button> -->
 					<input type="button" class="graph__btn graph__btn-first" id="create_button__first" value="Создать матрицу">
 					<input type="button" class="graph__btn graph__btn-first graph__btn--check" disabled id="check_button__first" value="Проверить">
-					<input type="button" class="graph__btn graph__btn-first graph__btn--delete" id="delete_button__first" value="Удалить матрицу">
+					<input type="button" class="graph__btn graph__btn-first graph__btn--delete" disabled id="delete_button__first" value="Удалить матрицу">
 				</div>
 			</form>
 		</section>
