--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 	<script src="js/tasks/d.js"></script>
 	<script src="js/tasks/e.js"></script>
 	<script src="js/tasks/f.js"></script>
+	<script src="js/tasks/l.js"></script>
 	<script src="js/main.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
@@ -123,6 +124,19 @@
 		</section>
 		<section class="tabcontent" id="l__tab">
 			<h1>Задание L</h1>
+			<p>Неориентированный граф задан матрицей смежности. Найдите степени всех вершин графа.</p>
+			<form action="">
+				<div>
+					<p>Введите количество строк:</p>
+					<input class="graph__input" id="rows_l" type="number" required min="1" max="30" value="1">
+					<p>Введите количество столбцов:</p>
+					<input class="graph__input" id="columns_l" type="number" required min="1" max="30" value="1">
+					<br>
+					<input type="button" class="graph__btn graph__btn-first" id="create_button__l" value="Создать матрицу">
+					<input type="button" class="graph__btn graph__btn-first graph__btn--check" disabled id="check_button__l" value="Вывод:">
+					<input type="button" class="graph__btn graph__btn-first graph__btn--delete" disabled id="delete_button__l" value="Удалить матрицу">
+				</div>
+			</form>
 		</section>
 	</main>
 </body>
